--- a/src/vaadin-date-picker.html
+++ b/src/vaadin-date-picker.html
@@ -160,6 +160,13 @@ If you want to replace the default input field with a custom implementation, you
         padding-right: 60px;
         margin-right: -32px;
       }
+      /* edit */
+
+      paper-input-container {
+        --paper-input-container-underline: {
+            background-color: var(--gl-date-bgColor);
+        }
+      }
     </style>
 
     <paper-input-container id="inputcontainer"
@@ -179,7 +186,9 @@ If you want to replace the default input field with a custom implementation, you
           required$="[[required]]"
           validator="[[validator]]"
           readonly$="[[readonly]]"
-          disabled$="[[disabled]]" />
+          disabled$="[[disabled]]" 
+          on-blur="Onblur"
+          on-focus="Onfocus"/>
       <div suffix id="clear" on-tap="_clear">
         <iron-icon icon="clear"></iron-icon>
         <paper-ripple class="circle" center></paper-ripple>
@@ -207,7 +216,8 @@ If you want to replace the default input field with a custom implementation, you
           class="dropdown-content"
           on-close="close"
           focused-date="[[focusedDate]]"
-          tabindex="-1">
+          tabindex="-1"
+          on-blur="Onblur">
       </vaadin-date-picker-overlay>
     </iron-dropdown>
 
@@ -288,7 +298,17 @@ If you want to replace the default input field with a custom implementation, you
 
       get _inputValue() {
         return this.inputElement.bindValue;
-      }
+      },
+      Onblur: function(e){
+        console.log(e.target.value);
+        if(e.target.value){
+          this.customStyle['--gl-date-bgColor'] = 'green';
+        }
+        else {
+           this.customStyle['--gl-date-bgColor'] = 'red';
+        }
+         this.updateStyles();
+      },
     });
   </script>
 </dom-module>
