--- a/demo/index.html
+++ b/demo/index.html
@@ -7,6 +7,7 @@
 
   <title>gl-date-picker Basic Examples</title>
   <link rel="import" href="common.html">
+  <link rel="import" href="./../bower_components/gl-font/gl-rsu-font.html">
 </head>
 
 <body unresolved>
