--- a/vaadin-date-picker.html
+++ b/vaadin-date-picker.html
@@ -167,6 +167,11 @@ If you want to replace the default input field with a custom implementation, you
             background-color: var(--gl-date-bgColor);
         }
       }
+      label{
+        font-family: 'rsuregular' !important;
+        font-weight: bold !important;
+        font-size: 22px !important;
+      }
     </style>
 
     <paper-input-container id="inputcontainer"
