--- a/src/vaadin-date-picker.html
+++ b/src/vaadin-date-picker.html
@@ -166,6 +166,13 @@ If you want to replace the default input field with a custom implementation, you
         --paper-input-container-underline: {
             background-color: var(--gl-date-bgColor);
         }
+        --paper-input-container-disabled:{
+              opacity: 1;
+        }
+        --paper-input-container-underline-disabled:{
+              display: none;
+        }
+
       }
       label{
         font-family: 'rsuregular' !important;
