--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,8 @@
     <h3>Plain date picker</h3>
     <demo-snippet>
       <template>
-        <vaadin-date-picker></vaadin-date-picker>
+        <paper-button raised onclick="reset">Click</paper-button>
+        <vaadin-date-picker id="reset"></vaadin-date-picker>
       </template>
     </demo-snippet>
 
@@ -56,7 +57,7 @@
         </vaadin-date-picker>
       </template>
     </demo-snippet>
-
+    
   </div>
 </body>
 </html>
