--- a/vaadin-date-picker.html
+++ b/vaadin-date-picker.html
@@ -61,7 +61,7 @@ If you want to replace the default input field with a custom implementation, you
 <link rel="import" href="../iron-media-query/iron-media-query.html">
 <link rel="import" href="vaadin-date-picker-overlay.html">
 <link rel="import" href="vaadin-date-picker-behavior.html">
-
+<link rel="import" href="../gl-font/gl-cschatthai-font.html">
 <dom-module id="vaadin-date-picker">
   <template>
     <style>
@@ -163,16 +163,26 @@ If you want to replace the default input field with a custom implementation, you
       /* edit */
 
       paper-input-container {
-        --paper-input-container-underline: {
-            background-color: var(--gl-date-bgColor);
-        }
         --paper-input-container-disabled:{
               opacity: 1;
+        }
+        --paper-input-container-underline:{
+          border-bottom: var(--paper-input-border-success);
         }
         --paper-input-container-underline-disabled:{
               display: none;
         }
-
+        --paper-input-container-label:{
+          font-size:var(--gl-fontsize-label);
+          font-size: 20px;
+          font-family: 'rsuregular';
+          font-weight: bold;
+          color: var(--paper-input-label-color-success);
+        }
+        --paper-input-container-input:{
+          font-family: 'CSChatThaiUI', sans-serif !important;
+          -webkit-font-smoothing: antialiased;
+        }
       }
       label{
         font-family: 'rsuregular' !important;
@@ -314,15 +324,24 @@ If you want to replace the default input field with a custom implementation, you
       Onblur: function(e){
         //console.log(e.target.value);
         if(e.target.value){
-          this.customStyle['--gl-date-bgColor'] = 'green';
-          this.customStyle['--paper-input-container-color'] =  "green";
+          this.customStyle['--paper-input-border-success'] =  "1px solid green";
+          this.customStyle['--paper-input-label-color-success'] = "green";
         }
         else {
-           this.customStyle['--gl-date-bgColor'] = 'red';
-           this.customStyle['--paper-input-container-color'] =  "red";
+          this.customStyle['--paper-input-border-success'] =  "1px solid red";
+          this.customStyle['--paper-input-label-color-success'] = "red";
         }
          this.updateStyles();
       },
+      Onfocus:function(){
+        this.customStyle['--paper-input-container-color'] =  "#737373";
+      },
+      reset:function(){
+        this.customStyle['--paper-input-border-success'] =  "1px solid #737373";
+        this.customStyle['--paper-input-label-color-success'] = "#737373";
+        this.customStyle['--paper-input-container-color'] =  "#737373";
+        this.updateStyles();
+      }
     });
   </script>
 </dom-module>
